encore des fixes XD : overflow sur about

--- a/dev/css/layout/_general.scss
+++ b/dev/css/layout/_general.scss
@@ -7,6 +7,9 @@ section:not(.single-work, .work){
     * {
         z-index: 1;
     }
+}
+
+section {
     overflow: hidden;
 }
 
